	PR binutils/12329 	* avr-dis.c (avr_operand): Fix disassembly of ELPM, LPM and SPM 	insns using post-increment addressing.

* avr.h (AVR_ISA_AVR6): Fix typo, adding AVR_ISA_SPMX.